force-app/main/default/objects/Scholarship__c/Scholarship__c.object-meta.xml
<CustomObject>
    <label>Scholarship</label>
    <nameField>
        <label>Scholarship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scholarships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>