force-app/main/default/objects/Scholarship__c/fields/Award_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Award_Percentage__c</fullName>
    <label>Award Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>