force-app/main/default/objects/Scholarship__c/fields/Award_Type__c.field-meta.xml
<CustomField>
    <fullName>Award_Type__c</fullName>
    <label>Award Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Percentage of Tuition</fullName>
            </value>
            <value>
                <fullName>Full Tuition Waiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>