force-app/main/default/objects/Scholarship__c/fields/Citizenship_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Requirement__c</fullName>
    <label>Citizenship Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Domestic Only</fullName>
            </value>
            <value>
                <fullName>International Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>