force-app/main/default/objects/Scholarship__c/fields/Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Criteria__c</fullName>
    <label>Eligibility Criteria</label>
    <type>TextArea</type>
</CustomField>