force-app/main/default/objects/Scholarship__c/fields/Learning_Program__c.field-meta.xml
<CustomField>
    <fullName>Learning_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Program</label>
    <referenceTo>Learning_Program__c</referenceTo>
    <relationshipLabel>Scholarships</relationshipLabel>
    <relationshipName>Scholarships</relationshipName>
    <type>Lookup</type>
</CustomField>