force-app/main/default/objects/Scholarship__c/fields/Learning_Program_S__c.field-meta.xml
<CustomField>
    <fullName>Learning_Program_S__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Program S</label>
    <referenceTo>LearningProgram</referenceTo>
    <relationshipLabel>Scholarships</relationshipLabel>
    <relationshipName>Scholarships</relationshipName>
    <type>Lookup</type>
</CustomField>