force-app/main/default/objects/Scholarship__c/fields/Minimum_GPA__c.field-meta.xml
<CustomField>
    <fullName>Minimum_GPA__c</fullName>
    <label>Minimum GPA</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>