force-app/main/default/objects/Scholarship__c/fields/Scholarship_Type__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Type__c</fullName>
    <label>Scholarship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merit-Based</fullName>
            </value>
            <value>
                <fullName>Need-Based</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Minority/Diversity</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>